--- a/Makefile.am
+++ b/Makefile.am
@@ -33,6 +33,6 @@ EXTRA_pstack_SOURCES = pstack-i386.c pstack-amd64.c pstack-arm.c
 pstack_DEPENDENCIES = @ARCH_OBJ@
 pstack_LDADD = @ARCH_OBJ@
 
-AM_CPPFLAGS = -I @LIBUNWIND@/include
+# AM_CPPFLAGS = -I @LIBUNWIND@/include
 AM_CFLAGS = -std=c99
-pstack_LDADD += -L@LIBUNWIND@/lib -lunwind -lunwind-ptrace -lunwind-generic
+pstack_LDADD += -lunwind -lunwind-ptrace -lunwind-generic
